# SDL_Space

./: .gitignore  CMakeLists.txt  README.md
Engine/: space.cpp  space.h  utils.h
Engine/background/: Background.cpp  Background.h  IBackground.h
Engine/camera/: Camera.cpp  Camera.h  Icamera.h
Engine/input/: I_input.h  input.cpp  input.h
Engine/math/: vec2D.h
Engine/movement/: IMovement.h  Movement.cpp  Movement.h
Engine/player/: Iplayer.h  player.cpp  player.h
Engine/renderer/: Irenderer.h  renderer.h
Engine/texture/: ITexture.h  Texture.cpp  Texture.h
Engine/window/: Iwindow.h  window.cpp  window.h
src/: main.cpp
